# mare

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.tmp/pypkgs/: p115dav-0.0.10.4-py3-none-any.whl
backend/: .air.toml  .env.example  Dockerfile  README.md  dev-air.ps1  go.mod  go.sum
backend/data/: default-library.maredb  default-library.migration.json  mam.db
backend/tools/: cloud115_bridge.py  cloud115_core.py  p115_upload_sidecar.py  search_ai.py  search_ai.requirements.txt  test_cloud115_core.py
docker/clouddrive2-dev/: .env.example  README.md  docker-compose.api-dev.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_app_bootstrap.sql  0002_shell_libraries.sql  0003_library_pinning.sql  0004_upload_jobs.sql
src-tauri/src/: app_core.rs  app_state.rs  backend_runtime.rs  bootstrap.rs  database.rs  error.rs  lib.rs  libraries.rs  main.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/connectors/: mod.rs
src-tauri/src/import/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/tasks/: mod.rs
src-tauri/src/upload/: domain.rs  mod.rs  p115_provider.rs  store.rs
src/components/: MareLogo.tsx  MareWordmark.tsx  PaginationControls.tsx  RemovableRoleDialog.tsx  SidebarNav.tsx  TaskCenterDrawer.tsx  ThemeProvider.tsx
项目文档/: 1、总体架构简介.txt  2、系统功能设计说明书.txt  3、技术架构设计说明书.txt  4、mvp功能需求及任务拆分.txt  5、mvp实现prompt（按任务）.txt  6、多资产库改造蓝图.md  7、多资产库迁移与回归清单.md  8、CD2集成任务1-目标模型与删改清单.md
(+188 files in other folders)
