[package]
name = "mare"
version = "0.1.0"
description = "Mare desktop client"
authors = ["Codex"]
edition = "2021"

[lib]
name = "mare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
notify = "8"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
